<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="cat.diputaciolleida.tlayouts.MainActivity">


    <TextView
        android:text="@string/common"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <Button
        android:text="@string/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btLinear" />

    <Button
        android:text="@string/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btRelative" />

    <Button
        android:text="@string/webview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btWebview" />

    <TextView
        android:text="@string/adapter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <Button
        android:text="@string/listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btListview"
        android:onClick="listViewClick"/>

    <Button
        android:text="@string/gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btGridview"
        android:onClick="gridViewClick"/>
</LinearLayout>
