<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="cat.diputaciolleida.tlayouts.LinearActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
         android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/red"
            android:background="@color/red"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:layout_weight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/green"
            android:background="@color/green"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/blue"
            android:background="@color/blue"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/yellow"
            android:background="@color/yellow"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@android:color/black"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/row1"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/row2"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/row3"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/row4"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size"/>
    </LinearLayout>
</LinearLayout>
